[gd_scene load_steps=8 format=3 uid="uid://mjax8ndkjpo"]

[ext_resource type="Script" uid="uid://cfq66dvtr34an" path="res://scenes/game/managers/battle_manager.gd" id="1_fg1kb"]
[ext_resource type="PackedScene" uid="uid://tliv023b8t2y" path="res://scenes/game/managers/battle_manager/battle_stage/battle_ui/player_dice_ui/player_dice_ui.tscn" id="2_crwhu"]
[ext_resource type="PackedScene" uid="uid://cdbe3ylrhpbku" path="res://scenes/game/managers/enemy_manager/enemy_manager.tscn" id="2_p8obw"]
[ext_resource type="Resource" uid="uid://bla561aa14rfg" path="res://enemies/icon.tres" id="3_2d04w"]
[ext_resource type="PackedScene" uid="uid://dkx41chdlblvm" path="res://scenes/game/managers/battle_manager/battle_stage/dungeon_world_3d/battle_stage_3d.tscn" id="3_7e5o1"]
[ext_resource type="PackedScene" uid="uid://dsqqw522ht8gh" path="res://scenes/game/managers/battle_manager/battle_stage/battle_ui/enemy_info_ui.tscn" id="3_p8obw"]
[ext_resource type="PackedScene" uid="uid://o0mlkxh53i6j" path="res://scenes/game/managers/battle_manager/battle_stage/battle_ui/enemy_dice_ui.tscn" id="4_7e5o1"]

[node name="BattleManager" type="Node"]
script = ExtResource("1_fg1kb")

[node name="EnemyManager" parent="." instance=ExtResource("2_p8obw")]
unique_name_in_owner = true
enemy_resource = ExtResource("3_2d04w")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 4

[node name="WorldSubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="BattleStage3D" parent="SubViewportContainer/WorldSubViewport" instance=ExtResource("3_7e5o1")]
unique_name_in_owner = true

[node name="PlayerDiceUI" parent="." instance=ExtResource("2_crwhu")]
unique_name_in_owner = true
visible = false

[node name="EnemyInfoUI" parent="." instance=ExtResource("3_p8obw")]
unique_name_in_owner = true
visible = false

[node name="EnemyDiceUI" parent="." instance=ExtResource("4_7e5o1")]
unique_name_in_owner = true
visible = false

[node name="EnemyDamageTextSpawner" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="enemy_died" from="EnemyManager" to="." method="_on_enemy_manager_enemy_died"]
[connection signal="battle_ready" from="SubViewportContainer/WorldSubViewport/BattleStage3D" to="." method="_on_battle_stage_3d_battle_ready"]
[connection signal="enemy_dying_animation_finished" from="SubViewportContainer/WorldSubViewport/BattleStage3D" to="." method="_on_battle_stage_3d_enemy_dying_animation_finished"]
[connection signal="enemy_just_attacked" from="SubViewportContainer/WorldSubViewport/BattleStage3D" to="." method="_on_battle_stage_3d_enemy_just_attacked"]
[connection signal="player_dying_animation_finished" from="SubViewportContainer/WorldSubViewport/BattleStage3D" to="." method="_on_battle_stage_3d_player_dying_animation_finished"]
[connection signal="player_just_attacked" from="SubViewportContainer/WorldSubViewport/BattleStage3D" to="." method="_on_battle_stage_3d_player_just_attacked"]
[connection signal="dice_roll_finished" from="PlayerDiceUI" to="." method="_on_player_dice_ui_dice_roll_finished"]
[connection signal="player_attack" from="PlayerDiceUI" to="." method="_on_player_dice_ui_player_attack"]
[connection signal="dice_roll_finished" from="EnemyDiceUI" to="." method="_on_enemy_dice_ui_dice_roll_finished"]
